Added Apache-2.0 license, fixed some bugs, made the support code for controllers, started on Security Area

--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/TreeGridView.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/TreeGridView.xaml
@@ -9,7 +9,7 @@
     
     <Grid>
         <toolkit:TreeListView Name="UITree" Grid.Row="0" VerticalAlignment="Stretch" 
-                              HorizontalAlignment="Stretch">
+                              HorizontalAlignment="Stretch" ItemsSource="{Binding}">
             <toolkit:TreeListView.View>
                 <GridView x:Name="UIGridView">
                     <GridViewColumn x:Name="ExpanderColumn" />
