Began implementing commands, minor modification to Server.Core.Services.Security.Area to fix a bug, rest is work on ViewModels, Controls and Controllers all to establish the basic objects of the client.

--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/TreeGridView.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/TreeGridView.xaml
@@ -9,7 +9,8 @@
     
     <Grid>
         <toolkit:TreeListView Name="UITree" Grid.Row="0" VerticalAlignment="Stretch" 
-                              HorizontalAlignment="Stretch" ItemsSource="{Binding}">
+                              HorizontalAlignment="Stretch" ItemsSource="{Binding}"
+                              SelectedItemChanged="UITree_SelectedItemChanged">
             <toolkit:TreeListView.View>
                 <GridView x:Name="UIGridView">
                     <GridViewColumn x:Name="ExpanderColumn" />
