--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ribbon:RibbonWindow x:Class="OpenLawOffice.WinClient.MainWindow"
+﻿  <ribbon:RibbonWindow x:Class="OpenLawOffice.WinClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ribbon="clr-namespace:Microsoft.Windows.Controls.Ribbon;assembly=RibbonControlsLibrary"    
@@ -75,6 +75,21 @@
                     <ribbon:RibbonToggleButton x:Name="SecurityAreas_Edit" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Edit" />
                     <ribbon:RibbonButton x:Name="SecurityAreas_Save" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Save" />
                     <ribbon:RibbonButton x:Name="SecurityAreas_Cancel" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Cancel" />
+                </ribbon:RibbonGroup>
+            </ribbon:RibbonTab>
+
+            <ribbon:RibbonTab x:Name="SecurityAreaAclTab" Header="Area ACLs" Visibility="Hidden">
+                <ribbon:RibbonGroup x:Name="SecurityAreaAcls_Group" Header="Area ACLs">
+                    <ribbon:RibbonButton x:Name="SecurityAreaAcls_List" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="List" />
+                </ribbon:RibbonGroup>
+                <ribbon:RibbonGroup x:Name="SecurityAreaAcls_Relationships" Header="Relationships">
+                    
+                </ribbon:RibbonGroup>
+                <ribbon:RibbonGroup x:Name="SecurityAreaAcls_Actions" Header="Actions">
+                    <ribbon:RibbonToggleButton x:Name="SecurityAreaAcls_Create" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Create" />
+                    <ribbon:RibbonToggleButton x:Name="SecurityAreaAcls_Edit" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Edit" />
+                    <ribbon:RibbonButton x:Name="SecurityAreaAcls_Save" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Save" />
+                    <ribbon:RibbonButton x:Name="SecurityAreaAcls_Cancel" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Cancel" />
                 </ribbon:RibbonGroup>
             </ribbon:RibbonTab>
 
