--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaDetail.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaDetail.xaml
@@ -5,7 +5,57 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Background="White">
-    <Grid>
-        <Label Name="Name" Content="{Binding Name}" Grid.Row="0" />
+    <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="75" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="75" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Label Content="Security Area Details" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
+
+        <Label Content="Name:" Grid.Row="1" Grid.Column="0" />
+        <Label Name="UIName" Content="{Binding Path=Name, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
+
+        <Label Content="Description:" Grid.Row="2" Grid.Column="0" />
+        <Label Name="UIDescription" Content="{Binding Path=Description, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" />
+
+        <GroupBox Header="Core Details" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4">
+            <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="75" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="75" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                
+                <Label Content="Created:" Grid.Row="0" Grid.Column="0" />
+                <Label Name="UICreated" Content="{Binding Path=UtcCreated, Mode=OneWay}" Grid.Row="0" Grid.Column="1" />
+                <Label Content="By:" Grid.Row="0" Grid.Column="2" />
+                <Label Name="UICreatedBy" Content="{Binding Path=CreatedBy.DisplayText, Mode=OneWay}" Grid.Row="0" Grid.Column="3" />
+
+                <Label Content="Modified:" Grid.Row="1" Grid.Column="0" />
+                <Label Name="UIModified" Content="{Binding Path=UtcModified, Mode=OneWay}" Grid.Row="1" Grid.Column="1" />
+                <Label Content="By:" Grid.Row="1" Grid.Column="2" />
+                <Label Name="UIModifiedBy" Content="{Binding Path=ModifiedBy.DisplayText, Mode=OneWay}" Grid.Row="1" Grid.Column="3" />
+
+                <Label Content="Disabled:" Grid.Row="2" Grid.Column="0" />
+                <Label Name="UIDisabled" Content="{Binding Path=UtcDisabled, Mode=OneWay}" Grid.Row="2" Grid.Column="1" />
+                <Label Content="By:" Grid.Row="2" Grid.Column="2" />
+                <Label Name="UIDisabledBy" Content="{Binding Path=DisabledBy.DisplayText, Mode=OneWay}" Grid.Row="2" Grid.Column="3" />
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
