--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaEdit.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaEdit.xaml
@@ -23,10 +23,10 @@
         <Label Content="Edit Security Area" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
 
         <Label Content="Name:" Grid.Row="1" Grid.Column="0" />
-        <TextBox Name="UIName" Text="{Binding Path=Name, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
+        <TextBox Name="UIName" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
 
         <Label Content="Description:" Grid.Row="2" Grid.Column="0" />
-        <TextBox Name="UIDescription" Text="{Binding Path=Description, Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" />
+        <TextBox Name="UIDescription" Text="{Binding Path=Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" />
 
         <Label Content="Parent:" Grid.Row="3" Grid.Column="0" />
         <TextBlock Name="UIParent" Text="[See Tree]" VerticalAlignment="Center"
