--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
@@ -71,7 +71,7 @@
                     <ribbon:RibbonButton x:Name="SecurityAreas_Acls" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="ACLs" />
                 </ribbon:RibbonGroup>
                 <ribbon:RibbonGroup x:Name="SecurityAreas_Actions" Header="Actions">
-                    <ribbon:RibbonToggleButton x:Name="SecurityAreas_Create" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Create" />
+                    <ribbon:RibbonButton x:Name="SecurityAreas_Create" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Create" />
                     <ribbon:RibbonToggleButton x:Name="SecurityAreas_Edit" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Edit" />
                     <ribbon:RibbonButton x:Name="SecurityAreas_Save" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Save" />
                     <ribbon:RibbonButton x:Name="SecurityAreas_Cancel" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Cancel" />
@@ -86,7 +86,7 @@
                     
                 </ribbon:RibbonGroup>
                 <ribbon:RibbonGroup x:Name="SecurityAreaAcls_Actions" Header="Actions">
-                    <ribbon:RibbonToggleButton x:Name="SecurityAreaAcls_Create" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Create" />
+                    <ribbon:RibbonButton x:Name="SecurityAreaAcls_Create" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Create" />
                     <ribbon:RibbonToggleButton x:Name="SecurityAreaAcls_Edit" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Edit" />
                     <ribbon:RibbonButton x:Name="SecurityAreaAcls_Save" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Save" />
                     <ribbon:RibbonButton x:Name="SecurityAreaAcls_Cancel" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Cancel" />
