--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/ParentSelector.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/ParentSelector.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OpenLawOffice.WinClient.Controls"
+             xmlns:toolkit="clr-namespace:DW.WPFToolkit;assembly=DW.WPFToolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Background="White" BorderBrush="Black" BorderThickness="1">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -15,11 +16,17 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <local:TreeGridView Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                            x:Name="UITree" />
-        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+        <toolkit:TreeListView Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Stretch" 
+                              HorizontalAlignment="Stretch" x:Name="UITree" ItemsSource="{Binding}">
+            <toolkit:TreeListView.View>
+                <GridView x:Name="UIGridView">
+                    <GridViewColumn x:Name="ExpanderColumn" />
+                </GridView>
+            </toolkit:TreeListView.View>
+        </toolkit:TreeListView>
+        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center" 
+                    HorizontalAlignment="Center" Orientation="Horizontal">
             <Button Name="UIClear" Content="Clear" Width="50" Margin="5,0,5,0" Click="UIClear_Click" />
-            <Button Name="UICancel" Content="Cancel" Width="50" Margin="5,0,5,0" Click="UICancel_Click" />
             <Button Name="UISelect" Content="Select" Width="50" Margin="5,0,5,0" Click="UISelect_Click" />
         </StackPanel>
     </Grid>
