--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
@@ -73,6 +73,7 @@
                 <ribbon:RibbonGroup x:Name="SecurityAreas_Actions" Header="Actions">
                     <ribbon:RibbonButton x:Name="SecurityAreas_Create" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Create" />
                     <ribbon:RibbonToggleButton x:Name="SecurityAreas_Edit" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Edit" />
+                    <ribbon:RibbonButton x:Name="SecurityAreas_Disable" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Disable" />
                     <ribbon:RibbonButton x:Name="SecurityAreas_Save" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Save" />
                     <ribbon:RibbonButton x:Name="SecurityAreas_Cancel" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Cancel" />
                 </ribbon:RibbonGroup>
