--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaCreate.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaCreate.xaml
@@ -5,9 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:OpenLawOffice.WinClient.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Background="White">
-    <Canvas Name="UICanvas">
-        <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" x:Name="UIGrid" >
+             d:DesignHeight="300" d:DesignWidth="400" Background="White">
+    <Grid x:Name="UITopGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid VerticalAlignment="Top" HorizontalAlignment="Stretch" x:Name="UIGrid" Grid.Row="0" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="50" />
                 <RowDefinition Height="*" />
@@ -17,11 +23,9 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="75" />
-                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Label Content="Create Security Area" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
+            <Label Content="Create Security Area" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
 
             <Label Content="Name:" Grid.Row="1" Grid.Column="0" />
             <TextBox Name="UIName" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
@@ -32,9 +36,13 @@
             <Label Content="Parent:" Grid.Row="3" Grid.Column="0" />
             <Button Name="UIParent" Content="{Binding Path=Parent.Name}" VerticalAlignment="Center"
                        Grid.Row="3" Grid.Column="1" Height="25" Width="300" HorizontalAlignment="Left"
-                       ToolTip="Drag items in the left window to change their relationships."
                        Grid.ColumnSpan="3" Click="UIParent_Click" />
         </Grid>
-        <local:ParentSelector x:Name="UIParentSelector" Visibility="Hidden" Panel.ZIndex="50" />
-    </Canvas>
+        <Border x:Name="UIParentSelectorOverlay" BorderBrush="Black" BorderThickness="1" 
+                Background="#80000000" Visibility="Collapsed" HorizontalAlignment="Stretch" 
+                VerticalAlignment="Stretch" Grid.Row="0">
+            <local:ParentSelector x:Name="UIParentSelector" HorizontalAlignment="Center" 
+                                  VerticalAlignment="Center" Height="300" Width="300" />
+        </Border>
+    </Grid>
 </UserControl>
