--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaEdit.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/AreaEdit.xaml
@@ -3,67 +3,70 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:xctk="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Background="White">
-    <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="75" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="75" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+    <xctk:BusyIndicator x:Name="UIBusyIndicator" IsBusy="False">
+        <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-        <Label Content="Edit Security Area" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
+            <Label Content="Edit Security Area" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
 
-        <Label Content="Name:" Grid.Row="1" Grid.Column="0" />
-        <TextBox Name="UIName" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
+            <Label Content="Name:" Grid.Row="1" Grid.Column="0" />
+            <TextBox Name="UIName" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
 
-        <Label Content="Description:" Grid.Row="2" Grid.Column="0" />
-        <TextBox Name="UIDescription" Text="{Binding Path=Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" />
+            <Label Content="Description:" Grid.Row="2" Grid.Column="0" />
+            <TextBox Name="UIDescription" Text="{Binding Path=Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" />
 
-        <Label Content="Parent:" Grid.Row="3" Grid.Column="0" />
-        <TextBlock Name="UIParent" Text="[See Tree]" VerticalAlignment="Center"
+            <Label Content="Parent:" Grid.Row="3" Grid.Column="0" />
+            <TextBlock Name="UIParent" Text="[See Tree]" VerticalAlignment="Center"
                    Grid.Row="3" Grid.Column="1" ToolTip="Drag items in the left window to change their relationships." />
-        <Label Content="Children:" Grid.Row="3" Grid.Column="2" />
-        <TextBlock Name="UIChildren" Text="[See Tree]" Grid.Row="3" Grid.Column="4" VerticalAlignment="Center"
+            <Label Content="Children:" Grid.Row="3" Grid.Column="2" />
+            <TextBlock Name="UIChildren" Text="[See Tree]" Grid.Row="3" Grid.Column="4" VerticalAlignment="Center"
                    ToolTip="Drag items in the left window to change their relationships." />
-        
-        <GroupBox Header="Core Details" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4">
-            <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="75" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="75" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
 
-                <Label Content="Created:" Grid.Row="0" Grid.Column="0" />
-                <Label Name="UICreated" Content="{Binding Path=UtcCreated, Mode=OneWay}" Grid.Row="0" Grid.Column="1" />
-                <Label Content="By:" Grid.Row="0" Grid.Column="2" />
-                <Label Name="UICreatedBy" Content="{Binding Path=CreatedBy.Username, Mode=OneWay}" Grid.Row="0" Grid.Column="3" />
+            <GroupBox Header="Core Details" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4">
+                <Grid VerticalAlignment="Top" Height="Auto" Width="Auto" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="75" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="75" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-                <Label Content="Modified:" Grid.Row="1" Grid.Column="0" />
-                <Label Name="UIModified" Content="{Binding Path=UtcModified, Mode=OneWay}" Grid.Row="1" Grid.Column="1" />
-                <Label Content="By:" Grid.Row="1" Grid.Column="2" />
-                <Label Name="UIModifiedBy" Content="{Binding Path=ModifiedBy.Username, Mode=OneWay}" Grid.Row="1" Grid.Column="3" />
+                    <Label Content="Created:" Grid.Row="0" Grid.Column="0" />
+                    <Label Name="UICreated" Content="{Binding Path=UtcCreated, Mode=OneWay}" Grid.Row="0" Grid.Column="1" />
+                    <Label Content="By:" Grid.Row="0" Grid.Column="2" />
+                    <Label Name="UICreatedBy" Content="{Binding Path=CreatedBy.Username, Mode=OneWay}" Grid.Row="0" Grid.Column="3" />
 
-                <Label Content="Disabled:" Grid.Row="2" Grid.Column="0" />
-                <Label Name="UIDisabled" Content="{Binding Path=UtcDisabled, Mode=OneWay}" Grid.Row="2" Grid.Column="1" />
-                <Label Content="By:" Grid.Row="2" Grid.Column="2" />
-                <Label Name="UIDisabledBy" Content="{Binding Path=DisabledBy.Username, Mode=OneWay}" Grid.Row="2" Grid.Column="3" />
-            </Grid>
-        </GroupBox>
-    </Grid>
+                    <Label Content="Modified:" Grid.Row="1" Grid.Column="0" />
+                    <Label Name="UIModified" Content="{Binding Path=UtcModified, Mode=OneWay}" Grid.Row="1" Grid.Column="1" />
+                    <Label Content="By:" Grid.Row="1" Grid.Column="2" />
+                    <Label Name="UIModifiedBy" Content="{Binding Path=ModifiedBy.Username, Mode=OneWay}" Grid.Row="1" Grid.Column="3" />
+
+                    <Label Content="Disabled:" Grid.Row="2" Grid.Column="0" />
+                    <Label Name="UIDisabled" Content="{Binding Path=UtcDisabled, Mode=OneWay}" Grid.Row="2" Grid.Column="1" />
+                    <Label Content="By:" Grid.Row="2" Grid.Column="2" />
+                    <Label Name="UIDisabledBy" Content="{Binding Path=DisabledBy.Username, Mode=OneWay}" Grid.Row="2" Grid.Column="3" />
+                </Grid>
+            </GroupBox>
+        </Grid>
+    </xctk:BusyIndicator>
 </UserControl>
