Controls.TreeGridView now supports drag and drop which fixes #4 but uncovered #5.

--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/TreeGridView.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/TreeGridView.xaml
@@ -10,7 +10,10 @@
     <Grid>
         <toolkit:TreeListView Name="UITree" Grid.Row="0" VerticalAlignment="Stretch" 
                               HorizontalAlignment="Stretch" ItemsSource="{Binding}"
-                              SelectedItemChanged="UITree_SelectedItemChanged">
+                              SelectedItemChanged="UITree_SelectedItemChanged" AllowDrop="True"
+                              PreviewMouseLeftButtonDown="UITree_PreviewMouseLeftButtonDown"
+                              MouseMove="UITree_MouseMove" DragEnter="UITree_DragEnter"
+                              Drop="UITree_Drop">
             <toolkit:TreeListView.View>
                 <GridView x:Name="UIGridView">
                     <GridViewColumn x:Name="ExpanderColumn" />
