--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/MainWindow.xaml
@@ -82,8 +82,14 @@
             <ribbon:RibbonTab x:Name="SecurityAreaAclTab" Header="Area ACLs" Visibility="Hidden">
                 <ribbon:RibbonGroup x:Name="SecurityAreaAcls_Group" Header="Area ACLs">
                     <ribbon:RibbonButton x:Name="SecurityAreaAcls_List" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="List" />
-                    <ribbon:RibbonComboBox x:Name="SecurityAreaAcls_List_Area" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="Area:" />
-                    <ribbon:RibbonComboBox x:Name="securityAreaAcls_List_User" x:FieldModifier="public" LargeImageSource="Images\LargeIcon.png" Label="User:" />
+                    <StackPanel Orientation="Horizontal">
+                        <ribbon:RibbonComboBox x:Name="SecurityAreaAcls_List_Area" x:FieldModifier="public" Label="Area:" SelectionBoxWidth="200" />
+                        <ribbon:RibbonButton x:Name="SecurityAreaAcls_ClearArea" x:FieldModifier="public" SmallImageSource="Images\SmallIcon.png" Label="Clear" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <ribbon:RibbonComboBox x:Name="SecurityAreaAcls_List_User" x:FieldModifier="public" Label="User:" SelectionBoxWidth="200" />
+                        <ribbon:RibbonButton x:Name="SecurityAreaAcls_ClearUser" x:FieldModifier="public" SmallImageSource="Images\SmallIcon.png" Label="Clear" />
+                    </StackPanel>
                 </ribbon:RibbonGroup>
                 <ribbon:RibbonGroup x:Name="SecurityAreaAcls_Relationships" Header="Relationships">
                     
