--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/HierarchicalSelector.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/HierarchicalSelector.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="OpenLawOffice.WinClient.Controls.ParentSelector"
+﻿<UserControl x:Class="OpenLawOffice.WinClient.Controls.HierarchicalSelector"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
