--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/UserCreate.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Views/Security/UserCreate.xaml
@@ -8,8 +8,29 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Background="White">
     <xctk:BusyIndicator x:Name="UIBusyIndicator" IsBusy="False">
-        <Grid>
+        <Grid VerticalAlignment="Top" Height="Auto" Width="Auto">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="100" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="80" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
+            <Label Content="Create User" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" FontSize="16" Margin="0 10 0 0" />
+
+            <Label Content="Username:" Grid.Row="1" Grid.Column="0" />
+            <TextBox Name="UIUsername" Text="{Binding Path=Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
+
+            <Label Content="Password:" Grid.Row="2" Grid.Column="0" />
+            <PasswordBox Name="UIPassword" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" 
+                         PasswordChar="*" PasswordChanged="UIPassword_PasswordChanged" />
         </Grid>
     </xctk:BusyIndicator>
 </UserControl>
